syntax = "proto3";

package Superplane.ServiceAccounts;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/superplanehq/superplane/pkg/protos/service_accounts";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Superplane Service Accounts API";
    version: "1.0";
    description: "API for Superplane Service Accounts";
    contact: {
      name: "API Support";
      email: "support@superplane.com";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service ServiceAccounts {
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (CreateServiceAccountResponse) {
    option (google.api.http) = {
      post: "/api/v1/service-accounts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create a service account";
      description: "Creates a new service account in the organization";
      tags: "ServiceAccounts";
    };
  }

  rpc ListServiceAccounts(ListServiceAccountsRequest) returns (ListServiceAccountsResponse) {
    option (google.api.http) = {
      get: "/api/v1/service-accounts"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List service accounts";
      description: "Returns all service accounts in the organization";
      tags: "ServiceAccounts";
    };
  }

  rpc DescribeServiceAccount(DescribeServiceAccountRequest) returns (DescribeServiceAccountResponse) {
    option (google.api.http) = {
      get: "/api/v1/service-accounts/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Describe a service account";
      description: "Returns details of a specific service account";
      tags: "ServiceAccounts";
    };
  }

  rpc UpdateServiceAccount(UpdateServiceAccountRequest) returns (UpdateServiceAccountResponse) {
    option (google.api.http) = {
      patch: "/api/v1/service-accounts/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update a service account";
      description: "Updates the name or description of a service account";
      tags: "ServiceAccounts";
    };
  }

  rpc DeleteServiceAccount(DeleteServiceAccountRequest) returns (DeleteServiceAccountResponse) {
    option (google.api.http) = {
      delete: "/api/v1/service-accounts/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete a service account";
      description: "Deletes a service account and removes its RBAC policies";
      tags: "ServiceAccounts";
    };
  }

  rpc RegenerateServiceAccountToken(RegenerateServiceAccountTokenRequest) returns (RegenerateServiceAccountTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/service-accounts/{id}/token"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Regenerate service account token";
      description: "Regenerates the API token for a service account";
      tags: "ServiceAccounts";
    };
  }
}

message ServiceAccount {
  string id = 1;
  string name = 2;
  string description = 3;
  string organization_id = 4;
  string created_by = 5;
  bool has_token = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateServiceAccountRequest {
  string name = 1;
  string description = 2;
  string role = 3;
}

message CreateServiceAccountResponse {
  ServiceAccount service_account = 1;
  string token = 2;
}

message ListServiceAccountsRequest {}

message ListServiceAccountsResponse {
  repeated ServiceAccount service_accounts = 1;
}

message DescribeServiceAccountRequest {
  string id = 1;
}

message DescribeServiceAccountResponse {
  ServiceAccount service_account = 1;
}

message UpdateServiceAccountRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message UpdateServiceAccountResponse {
  ServiceAccount service_account = 1;
}

message DeleteServiceAccountRequest {
  string id = 1;
}

message DeleteServiceAccountResponse {}

message RegenerateServiceAccountTokenRequest {
  string id = 1;
}

message RegenerateServiceAccountTokenResponse {
  string token = 1;
}
